Updated Naming / Resume

--- a/index.html
+++ b/index.html
@@ -110,39 +110,39 @@
                         <div class="col-sm-4 slideanimleft">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
-                                    Java Replay
+                                    AutoMouse
                                 </h2>
-                                <a href="https://github.com/Ryanfsdf/JavaReplay">
-                                    <img class="img-portfolio img-responsive" src="img/JavaReplay.jpg">
+                                <a href="https://github.com/Ryanfsdf/AutoMouse">
+                                    <img class="img-portfolio img-responsive" src="img/AutoMouse.jpg">
                                 </a>
                                 <h4>
-                                    Mouse macro program written in Java using the jnativehook external library for global event capturing
+                                    Mouse recorder developed in Java using the jnativehook external library for global event capturing
                                 </h4>
                             </div>
                         </div>
                         <div class="col-sm-4 slideanim">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
-                                    PymFile
+                                    NeatBeats
                                 </h2>
-                                <a href="https://github.com/Ryanfsdf/PymFile">
-                                    <img class="img-portfolio img-responsive" src="img/PymFile.jpg">
+                                <a href="https://github.com/Ryanfsdf/NeatBeats">
+                                    <img class="img-portfolio img-responsive" src="img/NeatBeats.jpg">
                                 </a>
                                 <h4>
-                                    Python program/script that analyzes, manipulates, and organizes large collections of music files
+                                    Python program/script that cleans up messy music collections by analyzing, manipulating, and renaming files
                                 </h4>
                             </div>
                         </div>
                         <div class="col-sm-4 slideanimright">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
-                                    JavRuler
+                                    PixelRuler
                                 </h2>
-                                <a href="https://github.com/Ryanfsdf/JavRuler">
-                                    <img class="img-portfolio img-responsive" src="img/JavRuler.jpg">
+                                <a href="https://github.com/Ryanfsdf/PixelRuler">
+                                    <img class="img-portfolio img-responsive" src="img/PixelRuler.jpg">
                                 </a>
                                 <h4>
-                                    Program written in Java that measures relative distances between points on a screen
+                                    Virtual Ruler designed in Java that measures relative distances between points on a screen
                                 </h4>
                             </div>
                         </div>
@@ -164,10 +164,10 @@
                         <div class="col-sm-4 slideanim">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
-                                    Terrible Alarm
+                                    DontSnooze
                                 </h2>
-                                <a href="https://github.com/Ryanfsdf/TerribleAlarm">
-                                    <img class="img-portfolio img-responsive" src="img/terriblealarm.jpg">
+                                <a href="https://github.com/Ryanfsdf/DontSnooze">
+                                    <img class="img-portfolio img-responsive" src="img/DontSnooze.jpg">
                                 </a>
                                 <h4>
                                     Alarm Clock made for Terrible Hacks Hackathon 2016 designed to force people to wake up at a desired time by manipulating system files
