Added Typed.js / updated resume

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		            <div class="col-md-12">
 		            	<br><br><br><br><br><br>
 		                <h1>Ryan <span style="font-weight: 400;">Kim</span></h1>
-		                <h2>Hi! I'm a <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a> Major at the <a href="https://uwaterloo.ca">University of Waterloo.</a></h2>
+		                <h2><span class="typedelement"></span></h2>
 		                <a href="https://github.com/Ryanfsdf"><i class="hvr-icon-grow fa fa-github-square fa-3x" aria-hidden="true"></i></a>
 		                <a href="https://www.facebook.com/ryan.kim.146069"><i class="hvr-icon-grow fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
 		                <a href="https://ca.linkedin.com/in/ryanfsdf"><i class="hvr-icon-grow fa fa-linkedin-square fa-3x" aria-hidden="true">
@@ -84,7 +84,7 @@
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 myimg text-justify">
                     <p class="imgphoto"><img src="img/ryankimphoto.jpg"></p>
-                	<h3>I'm a student at the <a href="https://uwaterloo.ca">University of Waterloo</a> with a desire to leave a legacy in the world.<h3>
+                    <h3>Hi! I'm a <a href="https://en.wikipedia.org/wiki/Software_developer">Software Developer</a> currently attending the <a href="https://uwaterloo.ca">University of Waterloo</a> for a <a href="https://cs.uwaterloo.ca">Bachelor of Computer Science</a>.</h3>
                     <h3>My legal name is 
                     <span onclick="play()"><i class="fa fa-music"></i> Man-Jun</span> but my friends call me Ryan. Some people who see my name for the first time simply refer to me as "Man". My favourite programming language is <a href="https://www.python.org">Python</a>, and I love to work on <a href="#projects">projects</a> during my free time. Some other things I enjoy are snowboarding, listening to music, hanging out with friends, hiking, travelling, reading, learning about new things, taking photos, and watching movies. Although I have lived in Canada for most of my life, I am fluent in both English and Korean.</h3>
                 </div>
@@ -116,7 +116,7 @@
                                     <img class="img-portfolio img-responsive" src="img/AutoMouse.jpg">
                                 </a>
                                 <h4>
-                                    Mouse recorder developed in Java using the jnativehook external library for global event capturing
+                                    Mouse recorder developed in Java to automate repetitive mouse actions
                                 </h4>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                                     <img class="img-portfolio img-responsive" src="img/NeatBeats.jpg">
                                 </a>
                                 <h4>
-                                    Python program/script that cleans up messy music collections by analyzing, manipulating, and renaming files
+                                    Python program/script that cleans up messy music collections
                                 </h4>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                                     <img class="img-portfolio img-responsive" src="img/PixelRuler.jpg">
                                 </a>
                                 <h4>
-                                    Virtual Ruler designed in Java that measures relative distances between points on a screen
+                                    Virtual Ruler designed in Java to measure relative distances between points on a screen
                                 </h4>
                             </div>
                         </div>
@@ -170,7 +170,7 @@
                                     <img class="img-portfolio img-responsive" src="img/DontSnooze.jpg">
                                 </a>
                                 <h4>
-                                    Alarm Clock made for Terrible Hacks Hackathon 2016 designed to force people to wake up at a desired time by manipulating system files
+                                    Alarm Clock written in Python made for Terrible Hacks Hackathon 2016 designed to wake people up at a desired time by manipulating system files
                                 </h4>
                             </div>
                         </div>
@@ -198,7 +198,7 @@
                                     <img class="img-portfolio img-responsive" src="img/flashgame.jpg">
                                 </a>
                                 <h4>
-                                    A flash game I made when I was 13. This was one of my first programming projects. <a href="https://get.adobe.com/flashplayer/">Adobe Flash Player</a> is required to play
+                                    A flash game I made when I was 13 using ActionScript 3. This was one of my first programming projects. <a href="https://get.adobe.com/flashplayer/">Adobe Flash Player</a> is required to play
                                 </h4>
                             </div>
                         </div>
@@ -209,7 +209,7 @@
                                 </h2>
                                 <br>
                                 <h4>
-                                    Some other non-programming related projects I have worked on include building a computer, self-installing radio/speakers onto my car, and flashing custom firmware on my phones.
+                                    Some other non-programming related projects I have worked on include building a computer, self-installing radio/speakers in my car, and flashing custom firmware on my phones.
                                 </h4>
                             </div>
                         </div>
@@ -252,12 +252,12 @@
                         <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-smile-o fa-5x" aria-hidden="true"></i>
                             <h2>WHAT I FIND FUN</h2>
-                            <h4 align="justify">I enjoy working on my <a href="#projects">projects</a>, snowboarding, listening to music, hanging out with friends, messing around with technology, playing ping pong, hiking, travelling, reading, taking photos, playing video games, watching movies, exploring my mind, and experiencing new things.</h4>
+                            <h4 align="justify">When I am not working on my <a href="#projects">projects</a>, you can find me snowboarding, listening to music, hanging out with friends, messing around with technology, playing ping pong, hiking, travelling, reading, taking photos, playing video games, watching movies, and trying out new things.</h4>
                         </div>
                         <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-list fa-5x" aria-hidden="true"></i>
                             <h2>BUCKET LIST</h2>
-                            <h4 align="justify">Some things I would like to do include  skydiving, backpacking through Europe, going on a vacation to <a href="http://www.seychelles.travel">Seychelles</a>, and sitting first class on a plane ☺.</h4>
+                            <h4 align="justify">Some things I would like to do include  skydiving, backpacking through Europe, going on a vacation to <a href="http://www.seychelles.travel">Seychelles</a>, and sitting first class on a plane overlooking a glistening sunset on the horizon ☺.</h4>
                         </div>
                     </div>
                 </div>
@@ -340,7 +340,7 @@
     </footer>
 
     <script src="js/jquery.js"></script>
-
+    <script src="js/typed.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
     <script>
@@ -441,6 +441,17 @@
               $(this).addClass("slides");
             }
           });
+        });
+    </script>
+
+    <script>
+        $(function(){
+            $(".typedelement").typed({
+                strings: ["Software Developer", "Computer Science Major",
+                "University of Waterloo"],
+                typeSpeed: 25, backSpeed: 25, backDelay: 1500,
+                loop: true
+            });
         });
     </script>
 
