name/email change

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 	<br>
                     <h4><span class="glyphicon glyphicon-map-marker"></span> Waterloo, Ontario</h4>
                     <h4><span class="glyphicon glyphicon-phone"></span> (226) 792 3793</h4>
-                    <h4><span class="glyphicon glyphicon-envelope"></span> manjun.kim@uwaterloo.ca</h4> 
+                    <h4><span class="glyphicon glyphicon-envelope"></span> ryan.kim@uwaterloo.ca</h4> 
                     <br>
                 </div>
                 <form action="mail.php" method="POST">
@@ -326,7 +326,7 @@
                     </a>
                     <br>
                     <br>
-                    <p class="text-muted">Copyright &copy; Ryan Kim 2016</p>
+                    <p class="text-muted">Copyright &copy; Ryan Manjun Kim 2016</p>
                 </div>
             </div>
         </div>
