--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		                <h1>Ryan <span style="font-weight: 400;">Kim</span></h1>
 		                <h2><span class="typedelement"></span></h2>
 		                <a href="https://github.com/Ryanfsdf"><i class="hvr-icon-grow fa fa-github-square fa-3x" aria-hidden="true"></i></a>
-		                <a href="https://www.facebook.com/ryan.kim.146069"><i class="hvr-icon-grow fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
+		                <a href="https://www.facebook.com/ryan.manjun.kim"><i class="hvr-icon-grow fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
 		                <a href="https://ca.linkedin.com/in/ryanfsdf"><i class="hvr-icon-grow fa fa-linkedin-square fa-3x" aria-hidden="true">
 		                </i></a>
 		                <br><br><br><br><br><br><br>
