--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <p class="imgphoto"><img src="img/ryankimphoto.jpg"></p>
                     <h3>Hi! I am a student <a href="https://en.wikipedia.org/wiki/Software_developer">Software Developer</a> currently attending the <a href="https://uwaterloo.ca">University of Waterloo</a> for a <a href="https://cs.uwaterloo.ca">Bachelor of Computer Science</a>.</h3>
                     <h3>My legal name is 
-                    <span onclick="play()"><i class="fa fa-music"></i> Man-Jun</span> but my friends call me Ryan. Some people who read my name for the first time simply refer to me as "Man". Although my interests are broad, I enjoy Software Engineering, Cloud Computing/Networks, and Machine Learning. I love programming and problem-solving in my free time and you can find me at various Hackathons working on some neat <a href="#projects"> projects</a>. Although I have lived in Canada for most of my life, I am fluent in both English and Korean.</h3>
+                    <span onclick="play()"><i class="fa fa-music"></i> Man-Jun</span> but my friends call me Ryan. Some people who read my name for the first time simply refer to me as "Man". Although my interests are broad, I love creating new things, whether it be designing and developing a new product at work, or hacking together some neat <a href="#projects"> projects</a> at Hackathons. Outside of software development, my hobbies include snowboarding, rafting, taking photos, and playing with new technology.
                 </div>
             </div>
         </div>
@@ -102,6 +102,45 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
+                	<div class="row">
+                        <div class="col-sm-4 slideanim myimg">
+                            <a href="https://www.bloomberg.com/">
+                                <img src="img/bloomberg.jpg">
+                            </a>
+                        </div>
+                        <div class="col-sm-8 slideanim">
+                            <h2 style="display: inline">
+                                Bloomberg LP
+                            </h2>
+                            <h3 style="display: inline">
+                                - Software Engineering Intern
+                            </h3>
+                            <h4 class="pull-right" style="display: inline">
+                                Jan 2018 - Apr 2018
+                            </h4>
+                            <br>
+                            <br>
+                            <h4>
+                                - Worked on the Bloomberg Development Environment (BDE), a collection of fundamental C++ libraries used throughout Bloomberg
+                            </h4>
+                            <br>
+                            <h4>
+                                - Created a custom encoder for Google Protocol Buffers binary format on top of existing Bloomberg infrastructure, allowing external clients to communicate with Bloomberg services using a common open source framework for serializing structured data
+                            </h4>
+                            <br>
+                            <h4>
+                                - Built an XML schema converter to convert Bloomberg's proprietary XML schemas into schemas for open source data serialization frameworks
+                            </h4>
+                            <br>
+                            <h4>
+                                - Identified and resolved performance bottlenecks in high traffic, performance critical code
+                            </h4>
+                        </div>
+                    </div>
+
+                    <br>
+                    <br>
+                    <br>
                     <div class="row">
                         <div class="col-sm-4 slideanim myimg">
                             <a href="http://www.genesys.com/">
@@ -113,7 +152,7 @@
                                 Genesys
                             </h2>
                             <h3 style="display: inline">
-                                - Software Developer Intern
+                                - Software Development Intern
                             </h3>
                             <h4 class="pull-right" style="display: inline">
                                 Sep 2016 - Dec 2016
@@ -121,19 +160,19 @@
                             <br>
                             <br>
                             <h4>
-                                - Independently developed support for a new audio codec on the company’s main selling call center platform written in C++, boosting call quality by up to 50%
+                                - Developed support for a new audio codec on the Genesys Voice Platform, the company's core telecommunications product
                             </h4>
                             <br>
                             <h4>
-                                - Fully designed and created an internal C++ code coverage merging tool in Python, which was later showcased at the company’s progress report presentation
+                                - Designed and launched an internal tool to aggregate C++ code coverage analysis results from distributed machines
                             </h4>
                             <br>
                             <h4>
-                                - Collaborated with Software Engineers and QA to implement the Python backend for an automated build status report system, accelerating development for recently pushed builds 
+                                - Introduced several Continuous Integration pipelines on Jenkins, streamlining development for recently pushed builds
                             </h4>
                             <br>
                             <h4>
-                                - Solely introduced and managed several core Continuous Integration builds on Jenkins CI, with builds used daily by all members of the team 
+                                - Improved developer efficiency by automating test status reporting for unit test builds. Results were used daily by all members of the team
                             </h4>
                         </div>
                     </div>
@@ -155,16 +194,16 @@
                                 - Teaching Assistant
                             </h3>
                             <h4 class="pull-right" style="display: inline">
-                                Jan 2017 - April 2017
+                                Jan 2017 - Dec 2017
                             </h4>
                             <br>
                             <br>
                             <h4>
-                                - Selected as a TA for "Linear Algebra for Engineering" based on exceptional academic performance
+                                - Selected as a Teaching Assistant for "Linear Algebra for Engineering" and "Calculus 1 for Honors Mathematics" based on exceptional academic performance
                             </h4>
                             <br>
                             <h4>
-                                - Corrected over 200 weekly assignments for 2nd year Engineering students
+                                - Corrected over 200 weekly assignments for 2nd year Engineering and Math students
                             </h4>
                         </div>
                     </div>
@@ -302,7 +341,7 @@
                                 </h2>
                                 <br>
                                 <h4>
-                                    Some other non-programming related projects I have worked on include building computers, car-speaker mods, and flashing custom firmware on my phones.
+                                    Some other non-programming related projects I have worked on include building computers, flashing custom phone firmware, and creating photo collections.
                                 </h4>
                             </div>
                         </div>
@@ -332,7 +371,7 @@
                         <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-book fa-5x" aria-hidden="true"></i>
                             <h2>EDUCATION</h2>
-                            <h4 align="justify">I am fortunate to be in my degree of choice because I enjoy my CS courses as well as my math courses. I am currently a Teaching Assistant in the <a href="https://uwaterloo.ca/math/">Faculty of Mathematics</a>. In my later years of University, I plan on pursuing minors (or possibly majors) in <a href="https://uwaterloo.ca/combinatorics-and-optimization/">Combinatorics & Optimization</a> and <a href="https://uwaterloo.ca/statistics-and-actuarial-science/">Statistics</a>.</h4>
+                            <h4 align="justify">I am fortunate to be in my degree of choice because I enjoy my Computer Science courses as well as my math courses. I am currently a Teaching Assistant in the <a href="https://uwaterloo.ca/math/">Faculty of Mathematics</a>. I plan on pursuing minors in <a href="https://uwaterloo.ca/combinatorics-and-optimization/">Combinatorics &amp; Optimization</a> and <a href="https://uwaterloo.ca/statistics-and-actuarial-science/">Statistics</a> in the future.</h4>
                         </div>
                         <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-code fa-5x" aria-hidden="true"></i>
@@ -345,12 +384,12 @@
                         <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-smile-o fa-5x" aria-hidden="true"></i>
                             <h2>INTERESTS</h2>
-                            <h4 align="justify">In my free time, I am usually working on my <a href=#projects>projects</a> or going through coding problems on sites like <a href="https://leetcode.com/">Leetcode</a>. Some other things you'll find me doing are snowboarding, reading about new technology, hanging out with friends, or watching Netflix.</h4>
+                            <h4 align="justify">In my free time, I am usually working on my <a href="#projects">projects</a> or going through coding problems on sites like <a href="https://leetcode.com/">Leetcode</a>. Some other things you'll find me doing are snowboarding, reading about new technology, hanging out with friends, or taking photos.</h4>
                         </div>
                         <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-list fa-5x" aria-hidden="true"></i>
                             <h2>BUCKET LIST</h2>
-                            <h4 align="justify">Some things I would like to do include skydiving, <a href="https://www.youtube.com/watch?v=At3xcj-pTjg">flying on a drone</a>, backpacking through Europe, and going on a vacation to <a href="http://www.seychelles.travel">Seychelles</a>.</h4>
+                            <h4 align="justify">Some things I would like to do include skydiving, <a href="https://www.youtube.com/watch?v=At3xcj-pTjg">flying on a drone</a>, solo backpacking through Europe, and going on a vacation to <a href="http://www.seychelles.travel/">Seychelles</a>.</h4>
                         </div>
                     </div>
                 </div>
@@ -419,7 +458,7 @@
                     </a>
                     <br>
                     <br>
-                    <p class="text-muted">Copyright &copy; Ryan Manjun Kim 2017</p>
+                    <p class="text-muted">Copyright &copy; Ryan Manjun Kim 2018</p>
                 </div>
             </div>
         </div>
