--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <br>
                             <br>
                             <h4>
-                                - Worked on the Bloomberg Development Environment (BDE), a collection of fundamental C++ libraries used throughout Bloomberg
+                                - Worked on the Bloomberg Development Environment (BDE) libraries, a collection of fundamental C++ libraries used throughout Bloomberg
                             </h4>
                             <br>
                             <h4>
