--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 	<div class="row">
                         <div class="col-sm-4 slideanim myimg">
                             <a href="https://www.bloomberg.com/">
-                                <img src="img/bloomberg.jpg">
+                                <img src="img/bloomberg.png">
                             </a>
                         </div>
                         <div class="col-sm-8 slideanim">
