--- a/index.html
+++ b/index.html
@@ -104,6 +104,33 @@
                 <div class="col-lg-12 text-center">
                 	<div class="row">
                         <div class="col-sm-4 slideanim myimg">
+                            <a href="https://www.coursera.org/">
+                                <img src="img/coursera.png">
+                            </a>
+                        </div>
+                        <div class="col-sm-8 slideanim">
+                            <h2 style="display: inline">
+                                Coursera
+                            </h2>
+                            <h3 style="display: inline">
+                                - Software Engineering Intern
+                            </h3>
+                            <h4 class="pull-right" style="display: inline">
+                                Sep 2018 - Dec 2018 (Expected)
+                            </h4>
+                            <br>
+                            <br>
+                            <h4>
+                                - Currently working on Scala backend in the Technical Content team
+                            </h4>
+                        </div>
+                    </div>
+
+                    <br>
+                    <br>
+                    <br>
+                	<div class="row">
+                        <div class="col-sm-4 slideanim myimg">
                             <a href="https://www.bloomberg.com/">
                                 <img src="img/bloomberg.png">
                             </a>
